--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@fullcalendar/react": "^6.1.15",
     "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^6.1.5",
-    "@mui/material": "^6.1.5",
+    "@mui/material": "^6.1.7",
+    "@mui/x-date-pickers": "^7.22.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
