--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@types/node": "^16.18.116",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "chart.js": "^4.4.6",
     "date-fns": "^4.1.0",
     "firebase": "^11.0.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-router-dom": "^6.27.0",
